--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Page Summarizer",
+  "name": "Page Summarizer Minimal",
   "version": "1.0",
-  "description": "Summarizes the current page using Gemini, OpenAI, or OpenRouter.",
-  "permissions": [
-    "activeTab",
-    "scripting",
-    "storage",
-    "downloads"
-  ],
-  "options_page": "settings.html",
+  "description": "A minimal version of the Page Summarizer extension.",
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    }
-  },
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
-  },
-  "background": {
-    "service_worker": "background.js"
+    "default_popup": "popup.html"
   }
 }
