--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,29 @@
 {
   "manifest_version": 3,
-  "name": "Page Summarizer Minimal",
+  "name": "Page Summarizer",
   "version": "1.0",
-  "description": "A minimal version of the Page Summarizer extension.",
+  "description": "Summarizes the current page using Gemini, OpenAI, or OpenRouter.",
   "permissions": [
     "activeTab",
     "scripting",
-    "storage"
+    "storage",
+    "downloads"
   ],
   "options_page": "settings.html",
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "background": {
+    "service_worker": "background.js"
   }
 }
